enum Position { first, middle, last, single }
